--- a/MyfirstApp/MainWindow.xaml
+++ b/MyfirstApp/MainWindow.xaml
@@ -1,13 +1,10 @@
 ﻿<Window x:Class="MyfirstApp.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:MyfirstApp"
-        mc:Ignorable="d"
         Height="500"
         Width="800"
-        MinWidth="428"
+        MinWidth="600"
+        MinHeight="400"
         WindowStyle="None"
         ResizeMode="CanResizeWithGrip"
         WindowStartupLocation="CenterScreen"
@@ -20,7 +17,8 @@
             <ColumnDefinition Width="*"/>
             <ColumnDefinition Width="1.5*"/>
         </Grid.ColumnDefinitions>
-
+        <Image Source="images/close.png" Grid.Column="1" Panel.ZIndex="1" MouseUp="Image_MouseUp" Style="{StaticResource imgClose}"/>
+        
         <Border CornerRadius="10 0 0 10">
             <Border.Background>
                 <LinearGradientBrush StartPoint="0,0" EndPoint="1,1">
@@ -43,14 +41,14 @@
                 <StackPanel VerticalAlignment="Center">
                     <TextBlock Text="Sign up" Style="{StaticResource titleText}"/>
                     <TextBlock Text="Enter your personal info and create new account to connect us" Style="{StaticResource normalText}" Opacity="0.8" Margin="20 30"/>
-                    <Button Content="Sign Up"  Style="{StaticResource button}"/>
+                    <Button Content="Sign Up"  Style="{StaticResource button}" Click="Button_Click_1"/>
                 </StackPanel>
             </Grid>
 
         </Border>
-        <Border Background="#ffffff" Grid.Column="1" CornerRadius="0 10 10 0">
+        <Border Background="#ffffff" Grid.Column="1" CornerRadius="0 10 10 0" MouseDown="Border_MouseDown" >
 
-            <StackPanel>
+            <StackPanel VerticalAlignment="Center">
                 <TextBlock Text="Sign in to the App" Style="{StaticResource titleText}" Foreground="#3AB19B"/>
                 <StackPanel Orientation="Horizontal" Margin="0 20" HorizontalAlignment="Center">
 
@@ -81,7 +79,7 @@
                         </Grid.ColumnDefinitions>
 
                         <Image Source="/images/email.png" Height="20"/>
-                        <TextBlock x:Name="textEmail"  Text="Email" Style="{StaticResource textHint}" Grid.Column="1" HorizontalAlignment="Right" Width="294"/>
+                        <TextBlock x:Name="textEmail"  Text="Email" Style="{StaticResource textHint}"/>
                         <TextBox x:Name="txtEmail" />
 
                     </Grid>
