--- a/MyfirstApp/App.xaml
+++ b/MyfirstApp/App.xaml
@@ -109,12 +109,13 @@
 
             <Setter Property="FontSize" Value="14"/>
             <Setter Property="Grid.Column" Value="1"/>
-            <Setter Property="Panel.ZIndex" Value="1"/>
+            <Setter Property="Panel.ZIndex" Value="0"/>
             <Setter Property="Margin" Value="10 0 0 0"/>
             <Setter Property="Foreground" Value="#acb0af"/>
 
         </Style>
-        <Style TargetType="TextBox">
+
+        <Style x:Key="textBox" TargetType="TextBox">
 
             <Setter Property="FontSize" Value="14"/>
             <Setter Property="Grid.Column" Value="1"/>
@@ -135,9 +136,12 @@
             <Setter Property="Foreground" Value="#878787"/>
             <Setter Property="BorderBrush" Value="Transparent"/>
             <Setter Property="BorderThickness" Value="1"/>
-            
+
 
         </Style>
+
+
+
 
         <Style x:Key="lgnButton" TargetType="Button">
 
@@ -191,6 +195,14 @@
                     </Setter>
                 </Trigger>
             </Style.Triggers>
+        </Style>
+        <Style x:Key="imgLogo" TargetType="Image">
+            <Setter Property="Width" Value="300"/>
+            <Setter Property="Height" Value="300"/>
+            <Setter Property="VerticalAlignment" Value="Top"/>
+            <Setter Property="HorizontalAlignment" Value="Left"/>
+            <Setter Property="Margin" Value="13 13 13 13"/>
+            
         </Style>
 
 
