--- a/MyfirstApp/MainWindow.xaml
+++ b/MyfirstApp/MainWindow.xaml
@@ -18,7 +18,7 @@
             <ColumnDefinition Width="1.5*"/>
         </Grid.ColumnDefinitions>
         <Image Source="images/close.png" Grid.Column="1" Panel.ZIndex="1" MouseUp="Image_MouseUp" Style="{StaticResource imgClose}"/>
-        
+
         <Border CornerRadius="10 0 0 10">
             <Border.Background>
                 <LinearGradientBrush StartPoint="0,0" EndPoint="1,1">
@@ -26,11 +26,11 @@
                     <GradientStop Color="#3AADA1" Offset="1"/>
 
                 </LinearGradientBrush>
-                
+
             </Border.Background>
-        
-        
-        <Grid>
+
+            
+            <Grid>
                 <Canvas>
                     <Polygon Points="0,20 230,140 0,270" Fill="#4EB1B6"/>
                     <Polygon Points="100,400 200,370 180,470" Fill="#4EB1B6"/>
@@ -39,37 +39,39 @@
                 </Canvas>
 
                 <StackPanel VerticalAlignment="Center">
-                    <TextBlock Text="Sign up" Style="{StaticResource titleText}"/>
-                    <TextBlock Text="Enter your personal info and create new account to connect us" Style="{StaticResource normalText}" Opacity="0.8" Margin="20 30"/>
-                    <Button Content="Sign Up"  Style="{StaticResource button}" Click="Button_Click_1"/>
+                    <Image Source="images\logo_dentdoc.png" Grid.Column="1" Panel.ZIndex="1" MouseUp="Image_MouseUp" Style="{StaticResource imgLogo}" Height="220"/>
+                    <TextBlock Text="Dental clinic" Style="{StaticResource titleText}"/>
+                    <TextBlock Text="Dental clinic Management System" Style="{StaticResource normalText}" Opacity="0.8" Margin="20 30"/>
+                    <StackPanel Orientation="Horizontal" Margin="0 20" HorizontalAlignment="Center">
+
+
+
+
+                        <Button Style="{StaticResource buttonCircle}">
+
+                            <Image Source="/images/linkedin.png" Width="20" Height="20"/>
+                        </Button>
+
+                        <Button Style="{StaticResource buttonCircle}">
+
+                            <Image Source="/images/gmail.png" Width="20" Height="20"/>
+                        </Button>
+                        <Button Style="{StaticResource buttonCircle}">
+
+                            <Image Source="/images/facebook.png" Width="20" Height="20"/>
+                        </Button>
+                    </StackPanel>
                 </StackPanel>
+
             </Grid>
 
         </Border>
-        <Border Background="#ffffff" Grid.Column="1" CornerRadius="0 10 10 0" MouseDown="Border_MouseDown" >
+        <Border Background="#ffffff" Grid.Column="1" CornerRadius="0 10 10 0" >
 
             <StackPanel VerticalAlignment="Center">
                 <TextBlock Text="Sign in to the App" Style="{StaticResource titleText}" Foreground="#3AB19B"/>
-                <StackPanel Orientation="Horizontal" Margin="0 20" HorizontalAlignment="Center">
 
-                 
-                    
-                    
-                    <Button Style="{StaticResource buttonCircle}">
 
-                        <Image Source="/images/linkedin.png" Width="20" Height="20"/>
-                    </Button>
-                  
-                    <Button Style="{StaticResource buttonCircle}">
-
-                        <Image Source="/images/gmail.png" Width="20" Height="20"/>
-                    </Button>
-                    <Button Style="{StaticResource buttonCircle}">
-
-                        <Image Source="/images/facebook.png" Width="20" Height="20"/>
-                    </Button>
-                </StackPanel>
-                
                 <TextBlock Text="or use your email info :" Style="{StaticResource normalText}" Foreground="#878787" Margin="0 10 0 15"/>
                 <Border BorderThickness="1" BorderBrush="#acb0af" Margin="70 7" CornerRadius="5">
                     <Grid Margin="7 9">
@@ -80,7 +82,7 @@
 
                         <Image Source="/images/email.png" Height="20"/>
                         <TextBlock x:Name="textEmail"  Text="Email" Style="{StaticResource textHint}"/>
-                        <TextBox x:Name="txtEmail" />
+                        <TextBox x:Name="txtEmail"  Style="{StaticResource textBox}"/>
 
                     </Grid>
                 </Border>
@@ -89,22 +91,24 @@
                     <Grid Margin="7 9">
                         <Grid.ColumnDefinitions >
                             <ColumnDefinition Width="auto"/>
-                            <ColumnDefinition Width="*"/>
+                            <ColumnDefinition Width="49*"/>
+                            <ColumnDefinition Width="211*"/>
+                            <ColumnDefinition Width="44*"/>
                         </Grid.ColumnDefinitions>
 
                         <Image Source="/images/password.png" Height="20"/>
 
-                        <TextBlock x:Name="textPassword"  Text="Password" Style="{StaticResource textHint}"/>
-                        <PasswordBox x:Name="txtPassword" Height="20" Style="{StaticResource pswBox}"/>
+                        <TextBlock x:Name="textPassword"  Text="Password" Style="{StaticResource textHint}" Grid.Column="1" Grid.ColumnSpan="3" Margin="10,0,0,0" HorizontalAlignment="Left" Width="294"/>
+                        <PasswordBox x:Name="txtPassword" Height="20"  Style="{StaticResource pswBox}" Grid.Column="1" Grid.ColumnSpan="3" Margin="10,0,0,0" />
 
                     </Grid>
                 </Border>
-                <Button Content="Sign In" Click="Button_Click" Style="{StaticResource lgnButton}"/>
+                <Button Content="Sign In" Style="{StaticResource lgnButton}"/>
 
 
 
 
-             
+
 
 
 
