--- a/MyfirstApp/App.xaml
+++ b/MyfirstApp/App.xaml
@@ -68,7 +68,7 @@
 
         <Style x:Key="buttonCircle" TargetType="Button">
 
-            <Setter Property="Background" Value="Transparent"/>
+            <Setter Property="Background" Value="#ffffff"/>
             <Setter Property="FocusVisualStyle" Value="{x:Null}"/>
             <Setter Property="Margin" Value="8 0"/>
             <Setter Property="Template" >
@@ -199,9 +199,9 @@
         <Style x:Key="imgLogo" TargetType="Image">
             <Setter Property="Width" Value="300"/>
             <Setter Property="Height" Value="300"/>
-            <Setter Property="VerticalAlignment" Value="Top"/>
-            <Setter Property="HorizontalAlignment" Value="Left"/>
-            <Setter Property="Margin" Value="13 13 13 13"/>
+            <!--   <Setter Property="VerticalAlignment" Value="Top"/>  -->
+            <!--  <Setter Property="HorizontalAlignment" Value="Left"/> -->
+            <!-- <Setter Property="Margin" Value="13 13 13 13"/> -->
             
         </Style>
 
