--- a/MyfirstApp/MainWindow.xaml
+++ b/MyfirstApp/MainWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="MyfirstApp.MainWindow"
+﻿<Window x:Class="DentalClinic.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Height="500"
@@ -8,7 +8,7 @@
         WindowStyle="None"
         ResizeMode="CanResizeWithGrip"
         WindowStartupLocation="CenterScreen"
-        AllowsTransparency="False"
+        AllowsTransparency="True"
         Background="Transparent"
         Title="DentDoc">
     <Grid>
@@ -103,7 +103,7 @@
 
                     </Grid>
                 </Border>
-                <Button Content="Sign In" Style="{StaticResource lgnButton}"/>
+                <Button Content="Sign In" Style="{StaticResource lgnButton}" Click="LoginBtn"/>
 
 
 
