--- a/MyfirstApp/MainWindow.xaml
+++ b/MyfirstApp/MainWindow.xaml
@@ -10,14 +10,19 @@
         WindowStartupLocation="CenterScreen"
         AllowsTransparency="True"
         Background="Transparent"
-        Title="DentDoc">
+        Title="DentDoc"
+        >
     <Grid>
 
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*"/>
             <ColumnDefinition Width="1.5*"/>
         </Grid.ColumnDefinitions>
-        <Image Source="images/close.png" Grid.Column="1" Panel.ZIndex="1" MouseUp="Image_MouseUp" Style="{StaticResource imgClose}"/>
+
+     
+
+      
+
 
         <Border CornerRadius="10 0 0 10">
             <Border.Background>
@@ -67,52 +72,68 @@
 
         </Border>
         <Border Background="#ffffff" Grid.Column="1" CornerRadius="0 10 10 0" >
+            <Grid>
 
-            <StackPanel VerticalAlignment="Center">
-                <TextBlock Text="Sign in to the App" Style="{StaticResource titleText}" Foreground="#3AB19B"/>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="50"/>
+                    <RowDefinition Height="*"/>
+                    
+                    
+                </Grid.RowDefinitions>
+                <StackPanel Grid.Column="1" Orientation="Horizontal" HorizontalAlignment="Right">
+                    <Image Source="images/minimize.png" MouseUp="btnClose" Style="{StaticResource imgClose}" />
+                    <Image Source="images/close.png" MouseUp="btnMinimize" Style="{StaticResource imgClose}" Margin="0 0 8 0"/>
+                </StackPanel>
 
-
-                <TextBlock Text="or use your email info :" Style="{StaticResource normalText}" Foreground="#878787" Margin="0 10 0 15"/>
-                <Border BorderThickness="1" BorderBrush="#acb0af" Margin="70 7" CornerRadius="5">
-                    <Grid Margin="7 9">
-                        <Grid.ColumnDefinitions >
-                            <ColumnDefinition Width="auto"/>
-                            <ColumnDefinition Width="*"/>
-                        </Grid.ColumnDefinitions>
-
-                        <Image Source="/images/email.png" Height="20"/>
-                        <TextBlock x:Name="textEmail"  Text="Email" Style="{StaticResource textHint}"/>
-                        <TextBox x:Name="txtEmail"  Style="{StaticResource textBox}"/>
-
-                    </Grid>
-                </Border>
-
-                <Border BorderThickness="1" BorderBrush="#acb0af" Margin="70 7" CornerRadius="5">
-                    <Grid Margin="7 9">
-                        <Grid.ColumnDefinitions >
-                            <ColumnDefinition Width="auto"/>
-                            <ColumnDefinition Width="49*"/>
-                            <ColumnDefinition Width="211*"/>
-                            <ColumnDefinition Width="44*"/>
-                        </Grid.ColumnDefinitions>
-
-                        <Image Source="/images/password.png" Height="20"/>
-
-                        <TextBlock x:Name="textPassword"  Text="Password" Style="{StaticResource textHint}" Grid.Column="1" Grid.ColumnSpan="3" Margin="10,0,0,0" HorizontalAlignment="Left" Width="294"/>
-                        <PasswordBox x:Name="txtPassword" Height="20"  Style="{StaticResource pswBox}" Grid.Column="1" Grid.ColumnSpan="3" Margin="10,0,0,0" />
-
-                    </Grid>
-                </Border>
-                <Button Content="Sign In" Style="{StaticResource lgnButton}" Click="LoginBtn"/>
+               
+                <StackPanel Grid.Row="1" VerticalAlignment="Center">
+                    <TextBlock Text="Sign in to the App" Style="{StaticResource titleText}" Foreground="#3AB19B"/>
 
 
+                    <TextBlock Text="or use your email info :" Style="{StaticResource normalText}" Foreground="#878787" Margin="0 10 0 15"/>
+                    <Border BorderThickness="1" BorderBrush="#acb0af" Margin="70 7" CornerRadius="5">
+                        <Grid Margin="7 9">
+                            <Grid.ColumnDefinitions >
+                                <ColumnDefinition Width="auto"/>
+                                <ColumnDefinition Width="*"/>
+                            </Grid.ColumnDefinitions>
+
+                            <Image Source="/images/email.png" Height="20"/>
+                            <TextBlock x:Name="textEmail"  Text="Email" Style="{StaticResource textHint}"/>
+                            <TextBox x:Name="txtEmail"  Style="{StaticResource textBox}"/>
+
+                        </Grid>
+                    </Border>
+
+                    <Border BorderThickness="1" BorderBrush="#acb0af" Margin="70 7" CornerRadius="5">
+                        <Grid Margin="7 9">
+                            <Grid.ColumnDefinitions >
+                                <ColumnDefinition Width="auto"/>
+                                <ColumnDefinition Width="49*"/>
+                                <ColumnDefinition Width="211*"/>
+                                <ColumnDefinition Width="44*"/>
+                            </Grid.ColumnDefinitions>
+                                    
+                            <Image Source="/images/password.png" Height="20"/>
+
+                            <TextBlock x:Name="textPassword"  Text="Password" Style="{StaticResource textHint}" Grid.Column="1" Grid.ColumnSpan="3" Margin="10,0,0,0" HorizontalAlignment="Left" Width="294"/>
+                            <PasswordBox x:Name="txtPassword" Height="20"  Style="{StaticResource pswBox}" Grid.Column="1" Grid.ColumnSpan="3" Margin="10,0,0,0" />
+
+                        </Grid>
+                    </Border>
+                    <Button Content="Sign In" Style="{StaticResource lgnButton}" Click="LoginBtn"/>
 
 
 
 
 
 
-            </StackPanel>
+
+
+                </StackPanel>
+
+            </Grid>
+            
         </Border>
 
     </Grid>
