--- a/MyfirstApp/Dashboard.xaml
+++ b/MyfirstApp/Dashboard.xaml
@@ -2,14 +2,122 @@
             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
             Height="600" Width="900"
-            Title="DentDoc" WindowState="Maximized"
+            Title="DentDoc" 
+        WindowState="Maximized"
+        WindowStartupLocation="CenterOwner"
+        WindowStyle="None"
             Background="#f0f4f8">
     <Grid>
-        <DataGridRow>
-            
-        </DataGridRow>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="50"/>
+            <RowDefinition Height="*"/>
+          
+        </Grid.RowDefinitions>
 
 
-     
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="70" />
+            <ColumnDefinition Width="*"/>
+           
+        </Grid.ColumnDefinitions>
+
+        <StackPanel Grid.Column="1" Orientation="Horizontal" HorizontalAlignment="Right">
+            <Image Source="images/minimize.png" MouseUp="btnClose" Style="{StaticResource imgClose}" />
+            <Image Source="images/close.png" MouseUp="btnMinimize" Style="{StaticResource imgClose}" Margin="0 0 8 0"/>
+        </StackPanel>
+
+        <Grid Grid.Row="1" Grid.Column="1">
+
+            <Grid.RowDefinitions>
+               
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="*"/>
+            </Grid.RowDefinitions>
+
+
+
+
+            <Grid.ColumnDefinitions>
+               
+                <ColumnDefinition />
+                <ColumnDefinition />
+                <ColumnDefinition />
+            </Grid.ColumnDefinitions>
+
+
+
+
+
+
+
+
+
+
+            <Border CornerRadius="10 0 0 10" >
+                <Border.Background>
+                    <LinearGradientBrush StartPoint="0,0" EndPoint="1,1">
+                        <GradientStop Color="#3AA9AD" Offset="0"/>
+                        <GradientStop Color="#3AADA1" Offset="1"/>
+
+                    </LinearGradientBrush>
+
+                </Border.Background>
+
+
+                <Grid>
+
+
+                    <StackPanel VerticalAlignment="Center">
+                        <TextBlock Text="Dental clinic" Style="{StaticResource normalText}"/>
+                        <Image Source="images\logo_dentdoc.png"  Style="{StaticResource imgLogo}" />
+
+
+                    </StackPanel>
+
+                </Grid>
+
+            </Border>
+            <Border Background="Yellow"  Grid.Column="1" CornerRadius="0 10 10 0" >
+                <TextBlock Text="Stats" Style="{StaticResource titleText}" Foreground="Black" VerticalAlignment="Center"/>
+                
+            </Border>
+
+            <Border Background="Orange"  Grid.Column="2" CornerRadius="0 10 10 0" >
+                <TextBlock Text="Stats" Style="{StaticResource titleText}" Foreground="Black" VerticalAlignment="Center"/>
+
+            </Border>
+            <Border Background="#ffffff" Grid.Row="1"  CornerRadius="0 10 10 0" >
+                <TextBlock Text="Stats" Style="{StaticResource titleText}" Foreground="Black" VerticalAlignment="Center"/>
+
+            </Border>
+            <Border Background="Lavender" Grid.Row="1"  Grid.Column="1" CornerRadius="0 10 10 0" >
+                <TextBlock Text="Stats" Style="{StaticResource titleText}" Foreground="Black" VerticalAlignment="Center"/>
+
+            </Border>
+            <Border Background="Fuchsia" Grid.Row="1" Grid.Column="2" CornerRadius="0 10 10 0" >
+                <TextBlock Text="Stats" Style="{StaticResource titleText}" Foreground="Black" VerticalAlignment="Center"/>
+
+            </Border>
+            <Border Background="Red" Grid.Row="2" CornerRadius="0 10 10 0" >
+                <TextBlock Text="Stats" Style="{StaticResource titleText}" Foreground="Black" VerticalAlignment="Center"/>
+
+            </Border>
+            <Border Background="Gray" Grid.Row="2" Grid.Column="1" CornerRadius="0 10 10 0" >
+                <TextBlock Text="Stats" Style="{StaticResource titleText}" Foreground="Black" VerticalAlignment="Center"/>
+
+            </Border>
+            <Border Background="Green" Grid.Row="2" Grid.Column="2" CornerRadius="0 10 10 0" >
+                <TextBlock Text="Stats" Style="{StaticResource titleText}" Foreground="Black" VerticalAlignment="Center"/>
+
+            </Border>
+
+
+
+
+
+        </Grid>
+
+
     </Grid>
 </Window>
